--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -68,7 +68,7 @@
   text-align: center;
 }
 
-.h21 h2, .h31 h3 {
+.h21 h2, .h31 h2, .h31 h3 {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
   color: #3a556a;
